feat: Me[GET] API
