# routes/Common.go
@@ -3,6 +3,7 @@ package routes
 import (
 	"github.com/gin-gonic/gin"
 	. "serverChallenge/controllers"
+	. "serverChallenge/handlers"
 )
 
 func CommonRoute(r *gin.RouterGroup) {
@@ -10,6 +11,10 @@ func CommonRoute(r *gin.RouterGroup) {
 	{
 		common.POST("/login", func(c *gin.Context) {
 			Login(c)
+		})
+		common.Use(VerifyUser)
+		common.GET("/me", func(c *gin.Context) {
+			Me(c)
 		})
 	}
 }
